Dark mode fix

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -28,7 +28,7 @@
     :root {
 			--gray-100: rgba(255, 255, 255, 0.1);
 			--gray-200: rgba(255, 255, 255, 0.2);
-			--body-background: #0F0F0F;
+			--body-background: #363636;
 			--body-font-color: #e9ecef;
 			--color-link: #84b2ff;
 			--color-visited-link: #b88dff;
